<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" >

    <RelativeLayout
        android:id="@+id/relativeLayoutCheckEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_engine"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSpinners"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutCheckEngine"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/Black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_make"
            android:textColor="@color/AliceBlue"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/textViewModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_model"
            android:textColor="@color/AliceBlue"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_year"
            android:textColor="@color/AliceBlue"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutBtConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/linearLayoutSpinners"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/linearLayoutSpinners"
        android:layout_toRightOf="@id/linearLayoutSpinners"
        android:background="@color/Black" >

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonshape_connect"
            android:text="@string/btn_connect"
            android:textColor="@color/AliceBlue"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnTroubleCodes"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <LinearLayout
            android:id="@+id/linearLayoutDTC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewVIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutSpinners"
        android:gravity="center"
        android:text="@string/tv_vin"
        android:textColor="@color/AliceBlue"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnTroubleCodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewVIN"
        android:layout_margin="5dp"
        android:background="#3749A3"
        android:text="@string/tv_trouble_codes"
        android:textColor="@color/White" 
        android:visibility="invisible"/>

</RelativeLayout>